# Solana-Stablecoin-Standard

./: .dockerignore  .env.example  .gitignore  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
admin-tui/: Cargo.toml
admin-tui/src/: main.rs
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240228000000_initial_schema.sql  20240228000001_compliance_features.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  models.rs  solana.rs  tests.rs  utils.rs
backend/src/middleware/: auth.rs  csrf.rs  https.rs  mod.rs  rate_limit.rs  request_id.rs
backend/src/routes/: admin.rs  audit.rs  auth.rs  compliance.rs  health.rs  metrics.rs  minters.rs  mod.rs  operations.rs  proofs.rs  roles.rs  stablecoin.rs  users.rs  webhooks.rs
backend/src/services/: compliance.rs  indexer.rs  mint_burn.rs  mod.rs
cli/: Cargo.toml
cli/src/: config.rs  error.rs  instructions.rs  main.rs
cli/src/commands/: handlers.rs  mod.rs
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docs/: API.md  ARCHITECTURE.md  BONUS.md  COMPLIANCE.md  OPERATIONS.md  README.md  SDK.md  SSS-1.md  SSS-2.md
example-frontend/: package-lock.json  package.json  tailwind.config.js
example-frontend/src/app/: globals.css  layout.tsx  page.tsx
example-frontend/src/components/: Dashboard.tsx  SDKProvider.tsx  WalletProvider.tsx  index.ts
programs/oracle-module/: Cargo.toml
programs/oracle-module/src/: lib.rs
programs/sss-token/: Cargo.toml
programs/sss-token/src/: admin.rs  burn.rs  constants.rs  error.rs  events.rs  lib.rs  math.rs  mint.rs  minter_management.rs  role_management.rs  state.rs  thaw.rs  transfer_hook.rs
programs/sss-token/src/extensions/: allowlist.rs  confidential_transfer.rs  mod.rs
programs/sss-token/src/instructions/: admin.rs  blacklist.rs  burn.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  role_management.rs  seize.rs  thaw.rs  transfer_hook.rs
scripts/: deploy-devnet.ts
sdk/core/: package.json  tsconfig.json
sdk/core/src/: error.ts  index.ts  math.ts  pda.ts  types.ts  vault.ts
tests/: test_error_cases.ts  test_minter_management.ts  test_role_management.ts  test_sss1_basic.ts  test_sss2_compliance.ts
trident-tests/: Cargo.toml  README.md  fuzz_burn.rs  fuzz_initialize.rs  fuzz_mint.rs  fuzz_roles.rs  fuzz_transfer.rs
