[workspace]
members = [
    "programs/*",
    "backend",
    "cli",
    "admin-tui",
    # "trident-tests",  # Requires OpenSSL and Perl for Windows builds
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/solanabr/solana-stablecoin-standard"
repository = "https://github.com/solanabr/solana-stablecoin-standard"

[workspace.dependencies]
# Anchor
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
anchor-client = "0.31.1"

# SPL
spl-token = { version = "5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "4.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6.3"

# Solana
solana-sdk = "2.0"
solana-client = "2.0"
solana-program = "2.0"

# OpenSSL (vendored for cross-platform builds)
openssl = { version = "0.10", features = ["vendored"] }

# Backend
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"

# Common
anyhow = "1.0"
thiserror = "1.0"