[package]
name = "sss-admin-tui"
version = "0.1.0"
description = "Interactive Terminal UI for SSS Token administration"
edition.workspace = true
license.workspace = true

[[bin]]
name = "sss-tui"
path = "src/main.rs"

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anchor-client.workspace = true
solana-client.workspace = true
anyhow.workspace = true
chrono.workspace = true
