[package]
name = "sss-backend"
version = "0.1.0"
description = "Backend services for Solana Stablecoin Standard"
edition.workspace = true
license.workspace = true

[[bin]]
name = "sss-backend"
path = "src/main.rs"

[dependencies]
anchor-client.workspace = true
anchor-lang.workspace = true
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-program.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
