[package]
name = "sss-backend"
version = "0.1.0"
description = "Backend services for Solana Stablecoin Standard"
edition.workspace = true
license.workspace = true

[[bin]]
name = "sss-backend"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }

# Web framework
axum = { workspace = true, features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace", "request-id", "set-header", "compression-gzip"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Solana (required for SSS)
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }

# OpenSSL vendored for Windows
openssl = { version = "0.10", features = ["vendored"] }

# Encoding
bs58 = "0.5"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Utilities
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"

# Configuration
dotenvy = "0.15"
once_cell = "1.19"

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1"
url = "2"

# Metrics
prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"
serial_test = "3.0"
pretty_assertions = "1.4"
